--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="global-container">
         <aside>
             <div class="company-logo">
-                <a href="javascript:;"><img src="./assets/images/gglogo.png" width="150px" alt=""></a>
+                <a href="javascript:;"><img src="./assets/images/gglogo.png" width="150px" alt="company-logo"></a>
             </div>
             <nav>
                 <ul>
