--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>xy</td>
+                                    <td>
+                                        <a href="javascript:;"><i class="fas fa-edit"></i></a>
+                                        <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                    </td>
                                     <td>001</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
@@ -155,7 +158,10 @@
                                     <td>Jakarta Barat</td>
                                 </tr>
                                 <tr>
-                                    <td>xy</td>
+                                    <td>
+                                        <a href="javascript:;"><i class="fas fa-edit"></i></a>
+                                        <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                    </td>
                                     <td>001</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
@@ -165,7 +171,10 @@
                                     <td>Jakarta Barat</td>
                                 </tr>
                                 <tr>
-                                    <td>xy</td>
+                                    <td>
+                                        <a href="javascript:;"><i class="fas fa-edit"></i></a>
+                                        <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                    </td>
                                     <td>001</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
@@ -175,7 +184,10 @@
                                     <td>Jakarta Barat</td>
                                 </tr>
                                 <tr>
-                                    <td>xy</td>
+                                    <td>
+                                        <a href="javascript:;"><i class="fas fa-edit"></i></a>
+                                        <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                    </td>
                                     <td>001</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
@@ -185,7 +197,10 @@
                                     <td>Jakarta Barat</td>
                                 </tr>
                                 <tr>
-                                    <td>xy</td>
+                                    <td>
+                                        <a href="javascript:;"><i class="fas fa-edit"></i></a>
+                                        <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                    </td>
                                     <td>001</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
@@ -195,7 +210,10 @@
                                     <td>Jakarta Barat</td>
                                 </tr>
                                 <tr>
-                                    <td>xy</td>
+                                    <td>
+                                        <a href="javascript:;"><i class="fas fa-edit"></i></a>
+                                        <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                    </td>
                                     <td>001</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
@@ -265,9 +283,9 @@
                         <label class="col-sm-4 col-form-label">Period</label>
                         <div class="col-sm-8">
                             <div class="d-flex align-items-center">
-                                <input type="text" class="form-control">
-                                <span class="ml-1 mr-1">S/D</span>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control period">
+                                <span class="ml-1 mr-1 font-weight-bold">S/D</span>
+                                <input type="text" class="form-control period">
                             </div>
                         </div>
                     </div>
@@ -330,7 +348,7 @@
                         </div>
                     </div>
                     <br>
-                    <fieldset class="border p-2">
+                    <fieldset class="border p-4">
                         <legend class="w-auto pl-1 pr-1">Mini Survey</legend>
                         <div class="fs-body">
                             <div class="action-section mb-2 text-right">
@@ -350,13 +368,17 @@
                                         <td>1</td>
                                         <td>Harga</td>
                                         <td><a href="javascript:;">View Answer</a></td>
-                                        <td>z</td>
+                                        <td class="text-center">
+                                            <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>1</td>
                                         <td>Harga</td>
                                         <td><a href="javascript:;">View Answer</a></td>
-                                        <td>z</td>
+                                        <td class="text-center">
+                                            <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -382,6 +404,7 @@
         crossorigin="anonymous"></script>
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 
     <script>
         $(document).ready(function () {
