--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:;" class="active">
+                        <a href="javascript:;" class="has-ul active">
                             <i class="fas fa-toolbox"></i>
                             <span>Master</span>
+                            <i class="fas fa-angle-down"></i>
                         </a>
                         <ul>
                             <li><a href="javascript:;">Brand</a></li>
@@ -393,9 +394,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -413,6 +412,16 @@
             });
 
             $('#table_modal_id').DataTable();
+
+            $(".has-ul").click(function () {
+                $(this).next("ul").slideToggle();
+                $(this).toggleClass("active");
+            });
+
+            $(".toggle-sidenav a").click(function () {
+                $("aside").toggleClass("zero-width");
+                $("header").toggleClass("full-width");
+            });
         });
     </script>
 
