--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                         <a href="javascript:;"><i class="fas fa-edit"></i></a>
                                         <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                     </td>
-                                    <td>001</td>
+                                    <td>002</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
                                     <td>Sport Center</td>
@@ -176,7 +176,7 @@
                                         <a href="javascript:;"><i class="fas fa-edit"></i></a>
                                         <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                     </td>
-                                    <td>001</td>
+                                    <td>003</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
                                     <td>Sport Center</td>
@@ -189,7 +189,7 @@
                                         <a href="javascript:;"><i class="fas fa-edit"></i></a>
                                         <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                     </td>
-                                    <td>001</td>
+                                    <td>004</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
                                     <td>Sport Center</td>
@@ -202,7 +202,7 @@
                                         <a href="javascript:;"><i class="fas fa-edit"></i></a>
                                         <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                     </td>
-                                    <td>001</td>
+                                    <td>005</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
                                     <td>Sport Center</td>
@@ -215,7 +215,7 @@
                                         <a href="javascript:;"><i class="fas fa-edit"></i></a>
                                         <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                     </td>
-                                    <td>001</td>
+                                    <td>006</td>
                                     <td>Tangkas</td>
                                     <td>HOP</td>
                                     <td>Sport Center</td>
@@ -349,8 +349,8 @@
                         </div>
                     </div>
                     <br>
-                    <fieldset class="border p-4">
-                        <legend class="w-auto pl-1 pr-1">Mini Survey</legend>
+                    <fieldset class="border p-3">
+                        <legend class="w-auto pl-1 pr-1 mb-0">Mini Survey</legend>
                         <div class="fs-body">
                             <div class="action-section mb-2 text-right">
                                 <a href="javascript:;" data-toggle="modal" data-target="#exampleModal">Add Question</a>
@@ -369,15 +369,15 @@
                                         <td>1</td>
                                         <td>Harga</td>
                                         <td><a href="javascript:;">View Answer</a></td>
-                                        <td class="text-center">
+                                        <td>
                                             <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>1</td>
+                                        <td>2</td>
                                         <td>Harga</td>
                                         <td><a href="javascript:;">View Answer</a></td>
-                                        <td class="text-center">
+                                        <td>
                                             <a href="javascript:;"><i class="fas fa-trash-alt"></i></a>
                                         </td>
                                     </tr>
@@ -422,6 +422,8 @@
                 $("aside").toggleClass("zero-width");
                 $("header").toggleClass("full-width");
             });
+
+            $(".dataTables_filter label input").attr("placeholder", "Search..");
         });
     </script>
 
